--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
+@import url('https://fonts.googleapis.com/css?family=Spartan&display=swap');
+
 * {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
+  font-family: 'Spartan', Verdana, Geneva, Tahoma, sans-serif ;
   height: 100vh;
-  background: rgb(44,53,49);
-  background: linear-gradient(126deg, rgba(44,53,49,1) 0%, rgba(17,100,102,1) 100%);
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  /* background: rgb(44,53,49);
+  background: linear-gradient(126deg, #161e27 0%, #232f3d 100%); */
+  background-image: url('./assets/bg.png');
+  background-position: center;
+  background-size: cover;
 }
 
 
