--- a/src/components/main_content/mainContent.css
+++ b/src/components/main_content/mainContent.css
@@ -2,4 +2,8 @@
   height: 100%;
   width: 100%;
   border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
