--- a/src/components/sign_in/styles.scss
+++ b/src/components/sign_in/styles.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   padding: 4rem;
-  margin: 2rem;
+  margin: 3rem auto;
   max-width: 40rem;
   border-radius: 1rem;
 
