--- a/src/containers/header/headerStyle.css
+++ b/src/containers/header/headerStyle.css
@@ -2,7 +2,7 @@
   height: 80px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   border: 1px solid white;
  
   
