--- a/src/components/search/searchBarStyle.css
+++ b/src/components/search/searchBarStyle.css
@@ -1,7 +1,8 @@
 .field {
-  width: 100%;
+  width: 30%;
   height: 56px;
   border-radius: 4px;
+  margin-right: 1rem;
   position: relative;
   background-color: rgba(255, 255, 255, 0.3);
   transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out;
