--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Spartan&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Spartan&display=swap");
 
 * {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
@@ -10,22 +12,18 @@
 }
 
 body {
-  font-family: 'Spartan', Verdana, Geneva, Tahoma, sans-serif ;
+  font-family: "Spartan", Verdana, Geneva, Tahoma, sans-serif;
   height: 100vh;
   /* background: rgb(44,53,49);
   background: linear-gradient(126deg, #161e27 0%, #232f3d 100%); */
-  background-image: url('./assets/bg.png');
-  background-position: center;
-  background-size: cover;
+  background-color: #485461;
+  background-image: linear-gradient(315deg, #2f3a46 0%, #242b31 74%);
 }
 
-
 .color {
-  color: #D1E8E2;
+  color: #d1e8e2;
   color: #2c3531;
-  color: #D9B08C;
-  color :#FFCB9A;
+  color: #d9b08c;
+  color: #ffcb9a;
   color: #116466;
-
-
 }
