--- a/src/components/searchbar/searchbar.styles.css
+++ b/src/components/searchbar/searchbar.styles.css
@@ -1,17 +1,16 @@
 .field {
-  display: flex;
-  width: 5%;
+  position: absolute;
+  width: 10%;
   height: 56px;
   border-radius: 4px;
   margin-right: 1rem;
-  position: relative;
   background-color: rgba(255, 255, 255, 0.3);
   transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out;
 }
 
 .field:hover {
   transition: width 1.5s, background-color 1.5s, ;
-  width: 35%;
+  width: 25%;
   background-color: #ffffff;
   /* background-color: rgba(255, 255, 255, 0.45); */
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
@@ -102,7 +101,7 @@
 }
 
 .searchIcon {
-  font-size: 2.5rem;
+  font-size: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
