created a signUp component, created a firebase database and conneted the app, implemented sign-in and sign-up feature

--- a/src/components/sign_in/sign_in.styles.scss
+++ b/src/components/sign_in/sign_in.styles.scss
@@ -8,11 +8,15 @@
   align-items: center;
   padding: 4rem;
   margin: 3rem auto;
-  max-width: 40rem;
+  min-width: 30rem;
   border-radius: 1rem;
 
   .title {
     color: white;
+  }
+
+  .sign-in-form {
+    width: 100%;
   }
 
   .buttons {
