--- a/src/components/movie/movie.styles.css
+++ b/src/components/movie/movie.styles.css
@@ -19,3 +19,44 @@
   font-size: 1.1rem;
   font-weight: bold;
 }
+
+.card-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;  
+  opacity: 0;
+}
+
+.card-overlay:hover {
+  opacity: 1;
+  transition: opacity 300ms ease-out;  
+}
+
+button {
+  width: 70%;
+  height: 14%;
+  background-color: rgba(0, 0, 0, 0.267);
+  border: 2px solid rgba(255, 255, 255, 0.76);
+  color: white;
+  border-radius: 3px;
+  margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+button:hover {
+  background-color: #2f3a46 ;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
