--- a/src/components/searchbar/searchbar.styles.css
+++ b/src/components/searchbar/searchbar.styles.css
@@ -1,28 +1,34 @@
 .field {
   position: absolute;
-  width: 10%;
+  right: 18rem;
+  width: 0%;
   height: 56px;
   border-radius: 4px;
-  margin-right: 1rem;
-  background-color: rgba(255, 255, 255, 0.3);
-  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out;
+  margin-right: 0;
+  background-color: rgba(255, 255, 255, 255);
+  transition: width 3s background-color ease-in-out, 0.3s box-shadow ease-in-out;
+  -webkit-transition: width 0.3s;
+  -moz-transition: width 0.3s;
+  transition: width 0.3s;
+  z-index: 1;
 }
 
-.field:hover {
+.field-active {
+  width: 20%;
+}
+
+/* .field:active {
   transition: width 1.5s, background-color 1.5s, ;
   width: 25%;
   background-color: #ffffff;
-  /* background-color: rgba(255, 255, 255, 0.45); */
+  background-color: rgba(255, 255, 255, 0.45);
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
-}
 
-.field:active {
-  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.2);
-}
+} */
 
-.field.active input {
+/* .field.active input {
   padding: 24px 16px 8px 16px;
-}
+} */
 
 /* .field.active input + label {
   top: 4px;
@@ -30,9 +36,9 @@
   color: #512da8;
 } */
 
-.field.locked {
+/* .field.locked {
   pointer-events: none;
-}
+} */
 
 .field input {
   width: 100%;
@@ -100,10 +106,15 @@
   pointer-events: none;
 }
 
-.searchIcon {
+.searchButton {
+  background-color: bisque;
+  height: 3.5rem;
+  width: 3.5rem;
+  border-radius: 4px;
   font-size: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-right: 0.5rem;
+  z-index: 5;
+  pointer-events: all;
 }
