--- a/src/components/searchbar/searchbar.styles.css
+++ b/src/components/searchbar/searchbar.styles.css
@@ -6,10 +6,10 @@
   border-radius: 4px;
   margin-right: 0;
   background-color: rgba(255, 255, 255, 255);
-  transition: width 3s background-color ease-in-out, 0.3s box-shadow ease-in-out;
+  /* transition: width 3s background-color ease-in-out, 3s box-shadow ease-in-out;
   -webkit-transition: width 0.3s;
-  -moz-transition: width 0.3s;
-  transition: width 0.3s;
+  -moz-transition: width 0.3s; */
+  transition: width 1.5s;
   z-index: 1;
 }
 
@@ -44,7 +44,7 @@
   width: 100%;
   height: 56px;
   position: relative;
-  padding: 0px 16px;
+  padding-left: 5px;
   border: none;
   border-radius: 4px;
   font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
