--- a/src/components/searchbar/searchbar.styles.css
+++ b/src/components/searchbar/searchbar.styles.css
@@ -6,9 +6,6 @@
   border-radius: 4px;
   margin-right: 0;
   background-color: rgba(255, 255, 255, 255);
-  /* transition: width 3s background-color ease-in-out, 3s box-shadow ease-in-out;
-  -webkit-transition: width 0.3s;
-  -moz-transition: width 0.3s; */
   transition: width 1.5s;
   z-index: 1;
 }
@@ -16,29 +13,6 @@
 .field-active {
   width: 20%;
 }
-
-/* .field:active {
-  transition: width 1.5s, background-color 1.5s, ;
-  width: 25%;
-  background-color: #ffffff;
-  background-color: rgba(255, 255, 255, 0.45);
-  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
-
-} */
-
-/* .field.active input {
-  padding: 24px 16px 8px 16px;
-} */
-
-/* .field.active input + label {
-  top: 4px;
-  opacity: 1;
-  color: #512da8;
-} */
-
-/* .field.locked {
-  pointer-events: none;
-} */
 
 .field input {
   width: 100%;
@@ -59,22 +33,6 @@
   -webkit-appearance: none;
 }
 
-/* .field input::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.8);
-}
-
-.field input::-moz-placeholder {
-  color: rgba(255, 255, 255, 0.8);
-}
-
-.field input:-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.8);
-}
-
-.field input:-moz-placeholder {
-  color: rgba(255, 255, 255, 0.8);
-} */
-
 .field input+label {
   position: absolute;
   top: 24px;
@@ -88,10 +46,6 @@
   pointer-events: none;
   transition: 0.1s all ease-in-out;
 }
-
-/* .field input+label.error {
-  color: #ec392f;
-} */
 
 .field p.predicted {
   position: absolute;
@@ -107,7 +61,7 @@
 }
 
 .searchButton {
-  background-color: bisque;
+  background-color: #e0e0e08e;
   height: 3.5rem;
   width: 3.5rem;
   border-radius: 4px;
