--- a/src/components/main_content/main_content.styles.css
+++ b/src/components/main_content/main_content.styles.css
@@ -1,7 +1,7 @@
 .mainContentContainer {
   min-height: 100%;
   width: 100%;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   padding: 3rem 5rem;
   display: grid;
   grid-gap: 1rem;
