--- a/src/components/movie_details/movie_details.styles.scss
+++ b/src/components/movie_details/movie_details.styles.scss
@@ -1,10 +1,10 @@
 .movie-details {
   height: 100%;
   width: 100%;
-  color: white;
+  color: rgba(255, 255, 255, 0.932);
   background-color: #333;
   background-repeat: no-repeat;
-  background-size: contain;
+  //background-size: cover;
   background-position: center center;
 
   padding: 0 2rem;
@@ -17,13 +17,12 @@
 
     .title {
       font-size: 2.5rem;
-     
+
       .year {
         color: #ccc;
         font-size: 1.3rem;
       }
     }
-
   }
 
   main {
@@ -43,34 +42,36 @@
 
     .details {
       .title {
-
+        margin-bottom: 2rem;
       }
 
       .grid {
         display: grid;
         grid-template-columns: 1fr 4fr;
         gap: 1rem;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
       }
     }
 
     .actors {
-
+      .title {
+        margin-bottom: 2rem;
+      }
       .grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
       }
       .actor {
-        margin: .5rem 0;
+        margin: 0.5rem 0;
+        font-size: 0.8rem;
 
         img {
-          width:50px;
+          width: 70px;
+          height: 70px;
+          object-fit: cover;
           border-radius: 50%;
         }
       }
     }
   }
-
-
-
 }
