--- a/src/components/sidebar/sidebar.styles.css
+++ b/src/components/sidebar/sidebar.styles.css
@@ -7,7 +7,9 @@
 @media screen and (max-width: 768px) {
   .sidebarContainer {
     position: absolute;
-    z-index: 300;
-    background-color: black;
+    z-index: 10;
+    width: 50%;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.753);
   }
 }
