implemented infinte scroll

--- a/src/components/main_content/main_content.styles.css
+++ b/src/components/main_content/main_content.styles.css
@@ -2,27 +2,34 @@
   min-height: 100%;
   width: 100%;
   /* border: 1px solid white; */
+
+  /* overflow-y: scroll; */
+  /* max-height: 100%; */
+  /* max-width: 600px; */
+  overflow: auto;
+}
+
+.movie-list {
   padding: 1rem 1rem;
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(5, 1fr);
-  overflow-y: scroll;
 }
 
 @media screen and (min-width: 1500px) {
-  .mainContentContainer {
+  .movie-list {
     grid-template-columns: repeat(6, 1fr);
   }
 }
 
 @media screen and (max-width: 1250px) {
-  .mainContentContainer {
+  .movie-list {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media screen and (max-width: 1000px) {
-  .mainContentContainer {
+  .movie-list {
     grid-template-columns: repeat(3, 1fr);
   }
 }
@@ -30,7 +37,7 @@
 /*Mobil eller mindre plattor*/
 
 @media screen and (max-width: 768px) {
-  .mainContentContainer {
+  .movie-list {
     grid-template-columns: repeat(2, 1fr);
   }
 }
