--- a/src/components/movie/movie.styles.css
+++ b/src/components/movie/movie.styles.css
@@ -41,7 +41,7 @@
   transition: opacity 300ms ease-out;
 }
 
-button {
+.movie-card button {
   width: 70%;
   height: 14%;
   background-color: rgba(0, 0, 0, 0.267);
@@ -54,11 +54,11 @@ button {
   align-items: center;
 }
 
-button:hover {
+.movie-card button:hover {
   background-color: #2f3a46;
   cursor: pointer;
 }
 
-button:focus {
+.movie-card button:focus {
   outline: none;
 }
