--- a/src/components/cast_list/cast_list.styles.scss
+++ b/src/components/cast_list/cast_list.styles.scss
@@ -8,22 +8,32 @@
     margin: 1rem 0;
     font-size: 0.8rem;
     position: relative;
-
+    animation: fade 2s;
+    
+    @keyframes fade {
+      from {
+        opacity: 0;
+      } to {
+        opacity: 1;
+      }
+    }
+    
     .profile-image {
       width: 100%;
       object-fit: cover;  
-      margin-left: auto;
+      border-radius: .5rem;
     }
-
+    
     .name {
       position: absolute;
-      bottom: 0;
+      bottom: 4px;
       width: 100%;
       height: auto;
       background: rgba(0, 0, 0, 0.6);
       padding: .5rem;
       font-size: .8rem;
       text-align: center;
+      border-radius: 0 0 .5rem .5rem;
     }
   }
   
