--- a/src/components/movie_details/movie_details.styles.scss
+++ b/src/components/movie_details/movie_details.styles.scss
@@ -1,13 +1,14 @@
 .movie-details {
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
   color: rgba(255, 255, 255, 0.932);
   background-color: #333;
   background-repeat: no-repeat;
   //background-size: cover;
   background-position: center center;
-
-  padding: 0 2rem;
+  padding: 1.5rem;
 
   header {
     width: 100%;
@@ -34,7 +35,7 @@
 
   main {
     width: 100%;
-    height: 80%;
+    // height: 80%;
 
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
@@ -64,22 +65,11 @@
       .title {
         margin-bottom: 2rem;
       }
-      // .grid {
-      //   display: grid;
-      //   grid-template-columns: 1fr 1fr;
-      // }
-      // .actor {
-      //   margin: 0.5rem 0;
-      //   font-size: 0.8rem;
-
-      //   img {
-      //     width: 55px;
-      //     height: 55px;
-      //     object-fit: cover;
-      //     border-radius: 50%;
-      //   }
-      // }
     }
+  }
+
+  .trailer-list {
+    margin-top: auto;
   }
 }
 @media screen and (max-width: 1250px) {
