--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -1,19 +1,30 @@
 ul {
-    list-style-type: none;
-    padding: 0;
-    color: rgba(228, 228, 228, 0.808);
-    margin: 0 auto;
-    width: 70%;
-    margin-top: 2rem;
+  list-style-type: none;
+  padding: 0;
+  color: rgba(228, 228, 228, 0.808);
+  margin: 0 auto;
+  width: 70%;
+  margin-top: 2rem;
 }
 
 li {
-    margin-bottom: 1.5rem;
-    font-size: 0.8rem;
-    cursor: pointer;
+  font-size: 0.9rem;
+  cursor: pointer;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+}
+
+li:hover {
+  color: rgb(228, 228, 228);
+}
+
+.active {
+  background-color: rgba(255, 255, 255, 0.164);
+  border-radius: 2px;
 }
 
 hr {
-    margin-bottom: 1.5rem;
-    border-color: rgba(228, 228, 228, 0.164);
+  margin-bottom: 1.5rem;
+  border-color: rgba(228, 228, 228, 0.164);
 }
