--- a/src/components/searchbar/searchbar.styles.css
+++ b/src/components/searchbar/searchbar.styles.css
@@ -3,10 +3,10 @@
   right: 4.5rem;
   width: 0%;
   height: 2.5rem;
-  border-radius: 4px;
+  border-radius: 4px 0 0 4px;
   margin-right: 0;
-  background-color: rgba(255, 255, 255, 255);
-  transition: width 1.5s;
+  background-color: rgba(255, 255, 255, 0.37);
+  transition: width 1s;
   z-index: 1;
 }
 
@@ -20,7 +20,7 @@
   position: relative;
   padding-left: 5px;
   border: none;
-  border-radius: 4px;
+  border-radius: 4px 0 0 4px;
   font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
   font-size: 20px;
   font-weight: 400;
@@ -29,11 +29,12 @@
   color: #282828;
   outline: none;
   box-shadow: 0px 4px 20px 0px transparent;
-  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out, 0.1s padding ease-in-out;
+  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out,
+    0.1s padding ease-in-out;
   -webkit-appearance: none;
 }
 
-.field input+label {
+.field input + label {
   position: absolute;
   top: 24px;
   left: 16px;
@@ -61,7 +62,7 @@
 }
 
 .searchButton {
-  background-color: #e0e0e08e;
+  background-color: #e0e0e0e3;
   height: 2.5rem;
   width: 2.5rem;
   border-radius: 4px;
@@ -75,5 +76,5 @@
 }
 
 .searchButton:hover {
-  background-color: #e0e0e0e3
+  background-color: #eeeeeee3;
 }
