--- a/src/index.css
+++ b/src/index.css
@@ -14,21 +14,22 @@ body {
   background: linear-gradient(126deg, #161e27 0%, #232f3d 100%); */
   /* background-color: #485461;
   background-image: linear-gradient(315deg, #2f3a46 0%, #242b31 74%); */
-  background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%);
-  /* background-image: linear-gradient(to right, #434343 0%, black 100%); */
+  background: #2c3e50; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #2c3e50,
+    #8096a1
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #2c3e50,
+    #8096a1
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 a {
   text-decoration: inherit;
   color: inherit;
-}
-
-.color {
-  color: #d1e8e2;
-  color: #2c3531;
-  color: #d9b08c;
-  color: #ffcb9a;
-  color: #116466;
 }
 
 /* Big screen */
@@ -41,8 +42,10 @@ a {
 
 /* Ipad */
 
-@media screen and (max-width: 768px) {}
+@media screen and (max-width: 768px) {
+}
 
 /* Mobile */
 
-@media screen and (max-width: 320px) {}
+@media screen and (max-width: 320px) {
+}
