--- a/src/components/sidebar/sidebar.styles.css
+++ b/src/components/sidebar/sidebar.styles.css
@@ -1,7 +1,6 @@
 .sidebarContainer {
-  height: 100%;
+  height: inherit;
   width: 20%;
-  /* border: 1px solid white; */
 }
 
 @media screen and (max-width: 768px) {
