--- a/src/components/cast_list/cast_list.styles.scss
+++ b/src/components/cast_list/cast_list.styles.scss
@@ -1,4 +1,6 @@
 .cast-list-container {
+  width: 100%;
+  padding: 1rem 0;
   .title {
     margin-bottom: 2rem;
   }
@@ -6,8 +8,9 @@
   .cast-list {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(4rem, 7rem));
+    grid-template-columns: repeat(auto-fill, minmax(4rem, 6rem));
     align-items: center;
+    justify-content: center;
     gap: 1rem;
 
     .actor {
