--- a/src/components/movie_details/movie_details.styles.scss
+++ b/src/components/movie_details/movie_details.styles.scss
@@ -1,26 +1,34 @@
 .movie-details {
   height: 100%;
   width: 100%;
-  display: flex;
-  flex-direction: column;
   color: rgba(255, 255, 255, 0.932);
   background-color: #333;
   background-repeat: no-repeat;
-  //background-size: cover;
-  background-position: center center;
-  padding: 1.5rem;
+  background-size: cover;
+  background-position: center;
+  padding: 2.5rem;
   overflow: auto;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
+    "header   header   header"
+    "poster   overview overview"
+    "poster   cast     cast"
+    ".        .        ."
+    "trailers trailers trailers";
+  gap: 1.5rem;
 
   &::-webkit-scrollbar {
     display: none;
   }
 
-  header {
+  .header {
+    grid-area: header;
     width: 100%;
     padding: 2rem 0;
     display: grid;
-    grid-template-columns: 3rem auto;
-    align-items: center;
+    grid-template-columns: 4rem auto;
 
     .go-back {
       cursor: pointer;
@@ -38,41 +46,69 @@
     }
   }
 
-  main {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
-    align-items: start;
-    gap: 3rem;
-
-    .poster {
-      width: 100%;
-      min-width: 200px;
-      height: auto;
-    }
+  .poster {
+    grid-area: poster;
+    width: inherit;
+    min-width: 15rem;
+    max-width: 25rem;
+    height: auto;
   }
 
-  .trailer-list {
-    margin-top: auto;
+  .movie-overview {
+    grid-area: overview;
+  }
+  .cast-list-container {
+    grid-area: cast;
+  }
+
+  .trailer-list-container {
+    grid-area: trailers;
   }
 
   @media screen and (max-width: 1250px) {
-    main {
-      grid-template-columns: 1fr 3fr 1fr;
+    grid-template-areas:
+      "header   header   header"
+      "poster   overview overview"
+      "cast   cast     cast"
+      ".        .        ."
+      "trailers trailers trailers";
+
+    .cast-list-container {
+      .title {
+        text-align: center;
+        margin-top: 1rem;
+      }
     }
   }
 
   @media screen and (max-width: 1000px) {
-    main {
-      grid-template-columns: repeat(3, 1fr);
-    }
   }
-
   /*Mobil eller mindre plattor*/
 
   @media screen and (max-width: 768px) {
-    main {
-      grid-template-columns: repeat(2, 1fr);
+    padding: 1rem;
+
+    .poster {
+      min-width: 3rem;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    grid-template-areas:
+      "header   header   header"
+      "overview overview overview"
+      "cast     cast     cast"
+      ".        .        ."
+      "trailers trailers trailers";
+
+    .header {
+      .title {
+        font-size: 1.8rem;
+      }
+    }
+
+    .poster {
+      display: none;
     }
   }
 }
