--- a/src/components/searchbar/searchbar.styles.css
+++ b/src/components/searchbar/searchbar.styles.css
@@ -29,12 +29,11 @@
   color: #282828;
   outline: none;
   box-shadow: 0px 4px 20px 0px transparent;
-  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out,
-    0.1s padding ease-in-out;
+  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out, 0.1s padding ease-in-out;
   -webkit-appearance: none;
 }
 
-.field input + label {
+.field input+label {
   position: absolute;
   top: 24px;
   left: 16px;
@@ -77,4 +76,11 @@
 
 .searchButton:hover {
   background-color: #eeeeeee3;
+}
+
+@media screen and (max-width: 768px) {
+  .field-active {
+    width: 15rem;
+    right: 3.5rem;
+  }
 }
