--- a/src/components/movie_details/movie_details.styles.scss
+++ b/src/components/movie_details/movie_details.styles.scss
@@ -1,6 +1,8 @@
 .movie-details {
   height: 100%;
   width: 100%;
+  max-width: 900px;
+  max-height: 80%;
   color: rgba(255, 255, 255, 0.932);
   background-color: #333;
   background-repeat: no-repeat;
