--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -1,30 +1,35 @@
 ul {
   list-style-type: none;
   padding: 0;
-  color: rgba(228, 228, 228, 0.808);
+  color: rgb(228, 228, 228);
   margin: 0 auto;
   width: 70%;
   margin-top: 2rem;
 }
 
 li {
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   cursor: pointer;
-  height: 3rem;
+  /* height: 3rem;
+   */
+  padding: 1rem 0.5rem;
   display: flex;
   align-items: center;
 }
 
 li:hover {
-  color: rgb(228, 228, 228);
+  filter: brightness(200%);
 }
 
 .active {
   background-color: rgba(255, 255, 255, 0.164);
+  color: white;
   border-radius: 2px;
 }
 
 hr {
-  margin-bottom: 1.5rem;
-  border-color: rgba(228, 228, 228, 0.164);
+  width: 4rem;
+  margin: 1.5rem 0.5rem;
+  border: none;
+  border-bottom: 1px solid rgba(228, 228, 228, 0.808);
 }
